@@ -190,7 +190,6 @@ use the object as a string:
 
     $position = Chess::Plisco->new;
     say $position->toFEN;
-    say "$position"; # Does the same as above.
 
 =item B<legalMoves>
 
@@ -1621,33 +1620,6 @@ but all available chess libraries were either too buggy or too slow or both
 for using them. So I decided to write a library that was well tested and
 fast enough, and that library is now B<Chess::Plisco>. The first letter
 P stands for Perl.
-
-=head2 Operation ">>" no method found
-
-The B<Chess::Plisco> overloads the stringification so that you can print
-objects into their FEN representation. That has the disadvantage in Perl that
-you get funny error messages, when you accidentally use any other operator
-on a B<Chess::Plisco> object. Examples:
-
-    $position = Chess::Plisco->new;
-
-    say $position; # Works fine, and prints the FEN representation;
-    $position >> 1; # Errors:
-    # Operation ">>" no method found,
-    #         left argument in overloaded package Chess::Plisco
-    #         right argument has no overloaded magic at SOURCE LOCATION
-
-Unfortunately, B<SOURCE LOCATION> is not neccessarily in your own code. If
-you call a method with a B<Chess::Plisco> object that expects something else,]
-for example an integer, the location will be somewhere in the code of the
-module. Example:
-
-    $position = Chess::Plisco->new;
-    # ...
-    $position->doMove($position); # Ouch!
-
-The location of the error message will now be inside the source code of
-B<Chess::Plisco>.
 
 =head1 COPYRIGHT
 
