@@ -1,6 +1,7 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- stringification is no longer overloaded
 
 v0.8.0  2025-11-16
 	- pondering implemented in engine
